// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownTag render as outline 1`] = `
<span
  className="lab-tag lab-tag--dropdown lab-tag--outline lab-tag--pale"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="button"
  tabIndex={0}
>
  Test render outline DropdownTag
  <span
    className="lab-tag__dropdown-icon-wrapper"
  >
    <span
      className="lab-icon lab-icon--CaretDown lab-icon--black-75 lab-tag--dropdown-icon"
    >
      <svg
        aria-hidden={true}
        className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
        fill="currentColor"
        height={20}
        viewBox="0 0 20 20"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.02 8.63A1 1 0 0 1 5.8 7h8.4a1 1 0 0 1 .78 1.63l-3.81 4.72a1.5 1.5 0 0 1-2.34 0L5.02 8.63ZM14.2 8H5.8l3.81 4.72c.2.25.58.25.78 0L14.2 8Z"
          fill="currentColor"
        />
      </svg>
    </span>
  </span>
</span>
`;

exports[`DropdownTag renders as disabled 1`] = `
<span
  className="lab-tag lab-tag--dropdown lab-tag--disabled lab-tag--pale"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="button"
  tabIndex={0}
>
  Test render disabled DropdownTag
  <span
    className="lab-tag__dropdown-icon-wrapper"
  >
    <span
      className="lab-icon lab-icon--CaretDown lab-icon--black-75 lab-tag--dropdown-icon"
    >
      <svg
        aria-hidden={true}
        className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
        fill="currentColor"
        height={20}
        viewBox="0 0 20 20"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.02 8.63A1 1 0 0 1 5.8 7h8.4a1 1 0 0 1 .78 1.63l-3.81 4.72a1.5 1.5 0 0 1-2.34 0L5.02 8.63ZM14.2 8H5.8l3.81 4.72c.2.25.58.25.78 0L14.2 8Z"
          fill="currentColor"
        />
      </svg>
    </span>
  </span>
</span>
`;

exports[`DropdownTag renders with a pink color 1`] = `
<span
  className="lab-tag lab-tag--dropdown lab-tag--pink-pale"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="button"
  tabIndex={0}
>
  Test render pink DropdownTag
  <span
    className="lab-tag__dropdown-icon-wrapper"
  >
    <span
      className="lab-icon lab-icon--CaretDown lab-icon--black-75 lab-tag--dropdown-icon"
    >
      <svg
        aria-hidden={true}
        className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
        fill="currentColor"
        height={20}
        viewBox="0 0 20 20"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.02 8.63A1 1 0 0 1 5.8 7h8.4a1 1 0 0 1 .78 1.63l-3.81 4.72a1.5 1.5 0 0 1-2.34 0L5.02 8.63ZM14.2 8H5.8l3.81 4.72c.2.25.58.25.78 0L14.2 8Z"
          fill="currentColor"
        />
      </svg>
    </span>
  </span>
</span>
`;

exports[`DropdownTag renders with base props 1`] = `
<span
  className="lab-tag lab-tag--dropdown lab-tag--pale"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="button"
  tabIndex={0}
>
  Test render DropdownTag
  <span
    className="lab-tag__dropdown-icon-wrapper"
  >
    <span
      className="lab-icon lab-icon--CaretDown lab-icon--black-75 lab-tag--dropdown-icon"
    >
      <svg
        aria-hidden={true}
        className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
        fill="currentColor"
        height={20}
        viewBox="0 0 20 20"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.02 8.63A1 1 0 0 1 5.8 7h8.4a1 1 0 0 1 .78 1.63l-3.81 4.72a1.5 1.5 0 0 1-2.34 0L5.02 8.63ZM14.2 8H5.8l3.81 4.72c.2.25.58.25.78 0L14.2 8Z"
          fill="currentColor"
        />
      </svg>
    </span>
  </span>
</span>
`;
